<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Milestone Settings</string>

    <string name="qtouch_title">Touchscreen</string>   
    <string name="baseband_title">Baseband</string>

    <string name="pref_baseband_title">Baseband selection</string>
    <string name="pref_baseband_summary">Choose UMTS bands appropriate for your phone (requires reboot)\nCurrently set to: %s</string>

    <string name="pref_qtouch_num_title">Multitouch</string>
    <string name="pref_qtouch_num_summary">Set number of distinct touches to be recognized by touchscreen</string>
    
    <string name="modem_error">Telephony problem</string>
    <string name="touch_for_info">Touch for information</string>
    <string name="reboot_timeout_msg">If no action is selected, the device will reboot in %1$d seconds.</string>
    <string name="modem_error_msg">A problem was detected in the phone\'s telephony layer. A reboot of the phone is required to repair the phone state.\nWhat do you want to do?</string>
    <string name="reboot_btn">Reboot now</string>
    <string name="snooze_btn">Remind again later</string>
    <string name="dismiss_btn">Don\'t remind again</string>
    <string name="device_rebooted_modem_error">The device was rebooted due to a problem in the phone\'s telephony layer.</string>
</resources>
