<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/baseband_title"
        android:key="pref_category_baseband">
        <ListPreference android:key="pref_baseband"
            android:dialogTitle="@string/pref_baseband_title"
            android:title="@string/pref_baseband_title"
            android:summary="@string/pref_baseband_summary"
            android:entries="@array/pref_baseband_entries"
            android:entryValues="@array/pref_baseband_values" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/qtouch_title"
        android:key="pref_category_qtouch_settings">
        <ListPreference android:key="pref_qtouch_num"
            android:dialogTitle="@string/pref_qtouch_num_title"
            android:title="@string/pref_qtouch_num_title"
            android:summary="@string/pref_qtouch_num_summary"
            android:entries="@array/pref_qtouch_num_entries"
            android:entryValues="@array/pref_qtouch_num_values" />
    </PreferenceCategory>

</PreferenceScreen>
